# AudioPlayer

./: .clang-format  .gitmodules  CMakeLists.txt  imgui.ini
Backend/src/: AudioEngine.hpp
Backend/src/Application/: Application.cpp  Application.hpp
Backend/src/Audio/: Audio.hpp  AudioManager.cpp  AudioManager.hpp
Backend/src/Core/: Events.cpp  Log.c
Backend/src/Layer/: Layer.hpp  LayerStack.cpp  LayerStack.hpp
Backend/src/Math/: Color.h  Rect.h
Backend/src/Renderer/: Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  RendererCommands.hpp  Texture.cpp  Texture.hpp  Window.hpp
Backend/src/Renderer/OpenGL/: OpenGLDataTypes.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp
Backend/src/Utils/Platform/: FileUtils.hpp
Backend/src/Utils/Platform/Linux/: FileUtils.cpp
Sandbox/src/: AudioPlayerLayer.cpp  AudioPlayerLayer.hpp  main.cpp
